--- a/Python/Flask/gpio/templates/index.html
+++ b/Python/Flask/gpio/templates/index.html
@@ -1,23 +1,34 @@
 <!doctype html>
 <html>
+<!-- Creates an html document -->
 <head>
      <title>GPIO LEDs</title>
+<!-- Defines the title of the webpage -->
 <style>
+/* Defines the style of various elements of the webpage using CSS */
 body{
 background-color: DarkSlateGray
 }
+/* Creates a dark gray background */
 .button{
+/* Defines the variables which are the same for both elements of the button class */
      border: Solid;
      border-color: DarkSlateGray;
      border-radius: 10%;
+/* The buttons have a dark, thick border with slightly rounded corners */
      height: 780px;
+/* Both buttons have a height of 780px, slightly smaller than the height of my (relatively small) computer screen */
      width: 49%;
      margin: 0.40%;
+/* Together, the buttons take up 98% of the screen (no matter the size), with margins which take up 0.40% on every side */
+/* This way, the buttons take up almost the entire screen, but can both be created in the same line */
      cursor: pointer;
      display: inline-block;
+/* "inline" allows the buttons to be created side by side in one line, while "block" allows them to preserve their normal height, instead of shrinking to the size of a normal line */
      text-decoration: none;
      font-size: 100px;
      font-width: bold;
+/* Defines the text (on/off messages) in the middle of the buttons */
 }
 .red{
      background-color: Red;
@@ -25,16 +36,23 @@ background-color: DarkSlateGray
 .green{
      background-color: LawnGreen;
 }
+/* Sets the colors (the only unique variable for each individual button */
 </style>
 </head>
 <body>
+<!-- Beginning of actual text of webpage -->
 <form method="POST" id="red">
+<!-- Creates the submit form for the red button which sends POST requests to app -->
      <input type="hidden" name="color" value="RED"> 
+<!-- All that the form has is a hidden input which will tell app which color it is -->
 </form>
 <form method="POST" id="green">
      <input type="hidden" name="color" value="GREEN">
 </form>
+<!-- Green button form -->
 <button class="button red" form="red" type="submit" name="red_btn" value="ON">{{msg1}}</button>
 <button class="button green" form="green" type="submit" name="green_btn" value="ON">{{msg2}}</button>
+<!-- Each submit button is a unique subelement in the button class, uniquely identified with one form -->
+<!-- The text in the middle of each button is the message variable received from app -->
 </body>
 </html>
